# skeleton-os

./: .editorconfig  .gitignore  LICENSE  README.md  meson.build
.github/workflows/: libc-unit-test.yml
arch/: README.md
arch/x86/bootloader/: Makefile  kernel_entry.S  loader.S
cross-files/: cross.ini  i686.ini
docs/: source-structure.md
include/: meson.build
include/console/: meson.build  vga_terminal.h
include/drivers/: iobus.h  meson.build
include/libc/: meson.build  string.h
include/logging/: kprintf.h  meson.build
linker-scripts/: meson.build
linker-scripts/i686/: linker.ld
native-files/: libc-local.ini
src/: meson.build
src/arch/: README.md  meson.build
src/arch/i686/: boot.S  grub.cfg  kernel_main.c  meson.build
src/console/: meson.build  vga_terminal.c
src/drivers/: iobus.S  meson.build
src/libc/: meson.build  string.c
src/logging/: kprintf.c  meson.build
tests/: meson.build
tests/libc-tests/: libc_test.c  meson.build
